Fix alignment of 'Manage Search Engines' button
BUG= 151788

Review URL: https://codereview.chromium.org/10983050

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@159250 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 8707d648f6fd38ce9c1c074fbced7b40cd464c85

--- a/chrome/browser/resources/options/browser_options.css
+++ b/chrome/browser/resources/options/browser_options.css
@@ -115,6 +115,25 @@ input[type='range'] {
   vertical-align: middle;
 }
 
+/* CSS tweak to fix crbug.com/151788. Inconsistencies in the CSS rules across
+ * platforms and elements. Too risky to attempt a general fix for M23 at this
+ * time. This fix addresses the immediate problem in the bug report by forcing
+ * the button to align consistently with its neighboring select element.
+ * TODO(kevers): Revisit padding rules for select and buttons to ensure
+ * consistency in the size and baseline across all platforms. */
+#manage-default-search-engines {
+  padding-bottom: 0;
+  padding-top: 0;
+}
+
+/* Override a platform specific rule in Widgets that may no longer be relevant.
+ * Too late in the development cycle to update Widgets.css due to the number
+ * of pages that depend on it.
+ * TODO(kevers): Rivisit padding rules. */
+#default-search-engine {
+  padding-bottom: 0;
+}
+
 /* Internet settings */
 
 #network-settings {
